fixed all alignment issues

--- a/src/css/NavigationItems.module.css
+++ b/src/css/NavigationItems.module.css
@@ -5,7 +5,7 @@
   list-style: none;
   /* flex-flow: dictates how flex items are placed in the flex container defining main axis and direction */
   /* flex-flow: row; */
-  display: flex;
+  display: block;
   align-items: center;
   height: 100%;
 }
@@ -13,6 +13,6 @@
 /* desktop setup */
 @media (min-width: 500px) {
   .NavigationItems {
-    flex-flow: row;
+    display: flex;
   }
 }
